# talisman-v1

./: .gitignore  .gitleaks.toml  .importlinter  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml  secret-scan.yml
deploy/: Containerfile.worker  README.md  run-live.sh  setup.sh
deploy/gateway/: Containerfile  entrypoint.sh  nginx.conf.template
deploy/systemd/: talisman-gateway.service  talisman.service
docs/: agent-coding-protocol.md  slice-backlog.md  talisman-v1.1-backlog.md
docs/adr/: 0001-bootstrap-constitution.md  0002-langgraph-workflow-design.md  0003-approval-idempotency.md  0004-cost-gateway-direct.md  0005-bootstrap-project-scope.md  0006-egress-gatekeeper-proxy.md  0007-containerized-worker-containment.md  0008-phase-prompt-and-artifact-flow.md  0009-egress-gateway-deployment.md  0010-credential-injecting-worker-gateway.md  README.md
docs/progress/: progress-ledger.md
docs/release/: v1-acceptance-checklist.md  v1-waiver-approval-2026-06-19.md
docs/reviews/: README.md  REVIEW-TEMPLATE.yaml  S02.01.yaml  S02.02.yaml  S02.03.yaml  S03.01.yaml  S03.02.yaml  S04.01.yaml  S04.02.yaml  S05.01.yaml  S05.02.yaml  S06.01.yaml  S07.01.yaml  S08.01.yaml  S08.02.yaml  S09.01.yaml  S09.02.yaml  S10.01.yaml  S10.02.yaml  S11.01.yaml  S11.02.yaml  S12.01.yaml  S13.01.yaml  S14.01.yaml  S14.02.yaml  S15.01.yaml  S15.02.yaml  S16.01.yaml  S16.02.yaml  S16.03.yaml  S16.04.yaml  S16.05.yaml  S16.06.yaml  S16.07.yaml  S16.08.yaml  S16.09.yaml  S16.10.yaml  S16.11.yaml  S16.12.yaml  S16.13.yaml  (+11 more)
docs/talisman-v1/: talisman-v1-acceptance-test-plan.md  talisman-v1-architecture-final.md  talisman-v1-architecture-guardrails.md  talisman-v1-change-summary-for-audit.md  talisman-v1-config-templates.md  talisman-v1-decision-audit.md  talisman-v1-implementation-guide.md  talisman-v1-master-build-roadmap.md  talisman-v1-operational-runbook.md  talisman-v1-progress-ledger-template.md  talisman-v1-slice-backlog.md
scripts/: checks.sh  codex_review.sh
src/talisman_core/: __init__.py  main.py
tests/: test_architecture_boundaries.py  test_smoke.py
tests/adapters/: test_egress_proxy.py  test_gateway_client.py  test_memory_store.py  test_sqlite_approval_idempotency.py  test_sqlite_budget.py  test_sqlite_event_log.py  test_sqlite_migrations.py  test_telegram_allowlist.py  test_telegram_approver.py  test_telegram_bot.py
(+85 files in other folders)
